# Tetris

./: .gitignore  README.md
Android/com.seaocean.Tetris/app/: build.gradle
Android/com.seaocean.Tetris/app/jni/: CMakeLists.txt
Android/com.seaocean.Tetris/app/jni/SDL_ttf/VisualC/: SDL_ttf.vcxproj
Android/com.seaocean.Tetris/app/jni/SDL_ttf/src/: version.rc
Android/com.seaocean.Tetris/app/jni/src/: Android.mk  CMakeLists.txt
Android/com.seaocean.Tetris/app/src/main/: AndroidManifest.xml
Android/com.seaocean.Tetris/app/src/main/java/com/seaocean/Tetris/: TetrisActivity.java
VisualStudio/Tetris/: Tetris.sln  Tetris.vcxproj  Tetris.vcxproj.filters
core/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  Arena.cpp  Arena.h  AudioSuite.cpp  AudioSuite.h  BlockGroup.cpp  BlockGroup.h  BlockMoveTracker.cpp  BlockMoveTracker.h  BrickPool.cpp  BrickPool.h  Button.cpp  Button.h  ConstDef.cpp  ConstDef.h  Control.cpp  Control.h  DebugTrace.cpp  DebugTrace.h  Dialog.cpp  Dialog.h  EventQueue.cpp  EventQueue.h  FadeTracker.cpp  FadeTracker.h  Label.cpp  Label.h  Material.cpp  Material.h  MusicCarousel.cpp  MusicCarousel.h  Panel.cpp  Panel.h  PhotoCarousel.cpp  PhotoCarousel.h  Screen.cpp  Screen.h  (+6 more)
core/LibsAndDlls/: SDL3_ttf.lib
doc/: 俄罗斯方块状态迁移.drawio  缩放分析.drawio
